init/openebs-monitoring/ingress.yaml

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: ${THIS_CLUSTER_ISSUER}
    nginx.ingress.kubernetes.io/rewrite-target: /
    spec.ingressClassName: ${THIS_CLUSTER_INGRESS}
    #traefik.ingress.kubernetes.io/router.middlewares: example-redirect-https@kubernetescrd
  labels:
    app.kubernetes.io/instance: openbao-ui
  name: openebs-monitoring
  namespace: ${THIS_OPENEBS_NAMESPACE}
spec:
  ingressClassName: ${THIS_CLUSTER_INGRESS}
  rules:
  - host: ${THIS_OPENEBS_MONITORING_HOST}.${THIS_DOMAIN}
    http:
      paths:
      - backend:
          service:
            name: openebs-monitoring-${THIS_NAME}-grafana
            port:
              number: 80
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - ${THIS_OPENEBS_MONITORING_HOST}.${THIS_DOMAIN}
    secretName: chart-${THIS_NAMESPACE}-${THIS_OPENEBS_MONITORING_HOST}-tls
